--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%svelte.assets%/favicon.ico" />
+		<link rel="icon" type="image/png" sizes="16x16" href="%svelte.assets%/favicon-16x16.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="%svelte.assets%/favicon-32x32.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
