--- a/static/github-pricing-page-using-tailwind-css/index.html
+++ b/static/github-pricing-page-using-tailwind-css/index.html
@@ -1,120 +1,172 @@
 <!DOCTYPE html>
 <html class="antialiased text-grey-darkest">
+	<head>
+		<title>Partial reproduction of Github pricing page using TailwindCSS</title>
+		<meta charset="UTF-8" />
+		<meta
+			name="description"
+			content="Partial reproduction of Github pricing page using TailwindCSS"
+		/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link href="main.574fb259.css" rel="stylesheet" type="text/css" />
+	</head>
 
-<head>
-    <title>Partial reproduction of Github pricing page using TailwindCSS</title>
-    <meta charset="UTF-8">
-    <meta name="description" content="Partial reproduction of Github pricing page using TailwindCSS">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="main.574fb259.css" rel="stylesheet" type="text/css">
-</head>
-
-<body>
-    <header class="bg-black mb-8">
-        <nav class="container mx-auto px-4 h-16 flex items-center justify-end">
-            <div class="w-8 h-6 inline-block flex lg:hidden flex-col justify-between">
-                <div class="bg-white h-1 rounded-sm"></div>
-                <div class="bg-white h-1 rounded-sm"></div>
-                <div class="bg-white h-1 rounded-sm"></div>
-            </div>
-            <ul class="list-reset hidden lg:flex items-center w-full">
-                <li class="mr-4"> <a href="#" class="pb-2 text-white no-underline">Features</a> </li>
-                <li class="mr-4"> <a href="#" class="pb-2 text-white no-underline">Business</a> </li>
-                <li class="mr-4"> <a href="#" class="pb-2 text-white no-underline">Explore</a> </li>
-                <li class="mr-4"> <a href="#" class="pb-2 text-white no-underline">Marketplace</a> </li>
-                <li class="md:flex-1"> <a href="#"
-                        class="pb-2 text-white no-underline border-b-2 border-grey-dark">Pricing</a> </li>
-                <li class="mr-4"> <input type="text" placeholder="Search GitHub"
-                        class="w-48 p-2 bg-grey-darkest text-grey text-sm rounded"> </li>
-                <li class="text-grey-darker"> <a href="#" class="text-white no-underline font-bold">Sign in</a> or <a
-                        href="#" class="text-white no-underline font-bold">Sign up</a> </li>
-            </ul>
-        </nav>
-    </header>
-    <main class="container mx-auto px-4 py-8 leading-normal">
-        <h1 class="mb-4 text-center text-4xl md:text-5xl font-light text-grey-darkest">Plans for all workflows</h1>
-        <p class="max-w-lg mx-auto mb-6 font-light text-center text-grey-dark text-xl">GitHub is free to use for public
-            and open source projects. <br class="hidden md:inline">Work together across unlimited private repositories
-            with a paid plan.</p>
-        <div class="flex flex-wrap -mx-2 mb-8">
-            <div class="flex w-full md:w-1/2 lg:w-1/4 px-2 mb-4">
-                <div class="border rounded shadow text-sm flex flex-grow flex-col">
-                    <h2 class="p-2 text-center text-indigo text-xl border-b">Developer</h2>
-                    <div class="px-6 py-8 border-b text-center flex-grow">
-                        <p class="mb-4"><span class="block font-bold text-4xl">$7</span> <span
-                                class="text-grey-dark">per month</span></p> <strong>Includes:</strong>
-                        <ul class="list-reset mb-4">
-                            <li>Personal account</li>
-                            <li>Unlimited public repositories</li>
-                            <li>Unlimited private repositories</li>
-                            <li>Unlimited collaborators</li>
-                        </ul>
-                        <p>Free for students as part of the <a href="#"
-                                class="no-underline text-indigo hover:underline">Student Developer Pack</a>.</p>
-                    </div> <button type="button"
-                        class="p-3 text-indigo text-lg font-bold hover:text-white hover:bg-blue">Sign up</button>
-                </div>
-            </div>
-            <div class="flex w-full md:w-1/2 lg:w-1/4 px-2 mb-4">
-                <div class="border rounded shadow text-sm flex flex-grow flex-col">
-                    <h2 class="p-2 text-center text-green text-xl border-b">Team</h2>
-                    <div class="px-6 py-8 border-b text-center flex-grow">
-                        <p class="mb-4"><span class="block font-bold text-4xl">$9</span> <span
-                                class="text-grey-dark">per user / month</span></p> <strong>Includes:</strong>
-                        <ul class="list-reset mb-4">
-                            <li>Organization account</li>
-                            <li>Unlimited public repositories</li>
-                            <li>Unlimited private repositories</li>
-                            <li>Team and user permissions</li>
-                        </ul>
-                        <p>Starting at $25 / month which includes your first 5 users.</p>
-                    </div> <button type="button"
-                        class="p-3 text-green text-lg font-bold hover:text-white hover:bg-green">Sign up</button>
-                </div>
-            </div>
-            <div class="w-full lg:w-1/2 px-2 mb-4 flex">
-                <div class="w-full border rounded shadow text-sm flex flex-col justify-center">
-                    <h2 class="p-2 text-center text-purple text-xl border-b">Business</h2>
-                    <div class="flex flex-grow">
-                        <div class="flex flex-col flex-1 border-r">
-                            <div class="px-6 py-8 border-b text-center flex-grow">
-                                <p class="mb-4"><span class="block font-bold text-4xl">$21</span> <span
-                                        class="text-grey-dark">per user / month</span></p> <strong><a href="#"
-                                        class="text-purple no-underline hover:underline">Hosted on
-                                        GitHub.com</a></strong>
-                                <ul class="list-reset mb-4">
-                                    <li>Organization account</li>
-                                    <li>SAML single sign-on</li>
-                                    <li>Access provisioning</li>
-                                    <li>24/5 support with 8-hour response time</li>
-                                    <li>99.95% Uptime SLA</li>
-                                </ul>
-                            </div> <button type="button"
-                                class="p-3 text-purple text-lg font-bold hover:text-white hover:bg-indigo">Get
-                                started</button>
-                        </div>
-                        <div class="flex flex-col flex-1">
-                            <div class="px-6 py-8 border-b text-center flex-grow">
-                                <p class="mb-4"><span class="block font-bold text-4xl">$21<sup>*</sup></span> <span
-                                        class="text-grey-dark">per user / month</span></p> <strong><a href="#"
-                                        class="text-purple no-underline hover:underline"> GitHub Enterprise</a></strong>
-                                <ul class="list-reset mb-4">
-                                    <li>Multiple organizations</li>
-                                    <li>SAML, LDAP, and CAS</li>
-                                    <li>Access provisioning</li>
-                                    <li>24/7 support for urgent issues</li>
-                                    <li>Advanced auditing</li>
-                                    <li>Host on your servers, AWS, Azure, or GCP</li>
-                                </ul>
-                            </div> <button type="button"
-                                class="p-3 text-purple text-lg font-bold hover:text-white hover:bg-indigo">Start a free
-                                trial</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
-</body>
-
+	<body>
+		<header class="bg-black mb-8">
+			<nav class="container mx-auto px-4 h-16 flex items-center justify-end">
+				<div class="w-8 h-6 inline-block flex lg:hidden flex-col justify-between">
+					<div class="bg-white h-1 rounded-sm"></div>
+					<div class="bg-white h-1 rounded-sm"></div>
+					<div class="bg-white h-1 rounded-sm"></div>
+				</div>
+				<ul class="list-reset hidden lg:flex items-center w-full">
+					<li class="mr-4"><a href="#" class="pb-2 text-white no-underline">Features</a></li>
+					<li class="mr-4"><a href="#" class="pb-2 text-white no-underline">Business</a></li>
+					<li class="mr-4"><a href="#" class="pb-2 text-white no-underline">Explore</a></li>
+					<li class="mr-4"><a href="#" class="pb-2 text-white no-underline">Marketplace</a></li>
+					<li class="md:flex-1">
+						<a href="#" class="pb-2 text-white no-underline border-b-2 border-grey-dark">Pricing</a>
+					</li>
+					<li class="mr-4">
+						<input
+							type="text"
+							placeholder="Search GitHub"
+							class="w-48 p-2 bg-grey-darkest text-grey text-sm rounded"
+						/>
+					</li>
+					<li class="text-grey-darker">
+						<a href="#" class="text-white no-underline font-bold">Sign in</a> or
+						<a href="#" class="text-white no-underline font-bold">Sign up</a>
+					</li>
+				</ul>
+			</nav>
+		</header>
+		<main class="container mx-auto px-4 py-8 leading-normal">
+			<h1 class="mb-4 text-center text-4xl md:text-5xl font-light text-grey-darkest">
+				Plans for all workflows
+			</h1>
+			<p class="max-w-lg mx-auto mb-6 font-light text-center text-grey-dark text-xl">
+				GitHub is free to use for public and open source projects.
+				<br class="hidden md:inline" />Work together across unlimited private repositories with a
+				paid plan.
+			</p>
+			<div class="flex flex-wrap -mx-2 mb-8">
+				<div class="flex w-full md:w-1/2 lg:w-1/4 px-2 mb-4">
+					<div class="border rounded shadow text-sm flex flex-grow flex-col">
+						<h2 class="p-2 text-center text-indigo text-xl border-b">Developer</h2>
+						<div class="px-6 py-8 border-b text-center flex-grow">
+							<p class="mb-4">
+								<span class="block font-bold text-4xl">$7</span>
+								<span class="text-grey-dark">per month</span>
+							</p>
+							<strong>Includes:</strong>
+							<ul class="list-reset mb-4">
+								<li>Personal account</li>
+								<li>Unlimited public repositories</li>
+								<li>Unlimited private repositories</li>
+								<li>Unlimited collaborators</li>
+							</ul>
+							<p>
+								Free for students as part of the
+								<a href="#" class="no-underline text-indigo hover:underline"
+									>Student Developer Pack</a
+								>.
+							</p>
+						</div>
+						<button
+							type="button"
+							class="p-3 text-indigo text-lg font-bold hover:text-white hover:bg-blue"
+						>
+							Sign up
+						</button>
+					</div>
+				</div>
+				<div class="flex w-full md:w-1/2 lg:w-1/4 px-2 mb-4">
+					<div class="border rounded shadow text-sm flex flex-grow flex-col">
+						<h2 class="p-2 text-center text-green text-xl border-b">Team</h2>
+						<div class="px-6 py-8 border-b text-center flex-grow">
+							<p class="mb-4">
+								<span class="block font-bold text-4xl">$9</span>
+								<span class="text-grey-dark">per user / month</span>
+							</p>
+							<strong>Includes:</strong>
+							<ul class="list-reset mb-4">
+								<li>Organization account</li>
+								<li>Unlimited public repositories</li>
+								<li>Unlimited private repositories</li>
+								<li>Team and user permissions</li>
+							</ul>
+							<p>Starting at $25 / month which includes your first 5 users.</p>
+						</div>
+						<button
+							type="button"
+							class="p-3 text-green text-lg font-bold hover:text-white hover:bg-green"
+						>
+							Sign up
+						</button>
+					</div>
+				</div>
+				<div class="w-full lg:w-1/2 px-2 mb-4 flex">
+					<div class="w-full border rounded shadow text-sm flex flex-col justify-center">
+						<h2 class="p-2 text-center text-purple text-xl border-b">Business</h2>
+						<div class="flex flex-grow">
+							<div class="flex flex-col flex-1 border-r">
+								<div class="px-6 py-8 border-b text-center flex-grow">
+									<p class="mb-4">
+										<span class="block font-bold text-4xl">$21</span>
+										<span class="text-grey-dark">per user / month</span>
+									</p>
+									<strong
+										><a href="#" class="text-purple no-underline hover:underline"
+											>Hosted on GitHub.com</a
+										></strong
+									>
+									<ul class="list-reset mb-4">
+										<li>Organization account</li>
+										<li>SAML single sign-on</li>
+										<li>Access provisioning</li>
+										<li>24/5 support with 8-hour response time</li>
+										<li>99.95% Uptime SLA</li>
+									</ul>
+								</div>
+								<button
+									type="button"
+									class="p-3 text-purple text-lg font-bold hover:text-white hover:bg-indigo"
+								>
+									Get started
+								</button>
+							</div>
+							<div class="flex flex-col flex-1">
+								<div class="px-6 py-8 border-b text-center flex-grow">
+									<p class="mb-4">
+										<span class="block font-bold text-4xl">$21<sup>*</sup></span>
+										<span class="text-grey-dark">per user / month</span>
+									</p>
+									<strong
+										><a href="#" class="text-purple no-underline hover:underline">
+											GitHub Enterprise</a
+										></strong
+									>
+									<ul class="list-reset mb-4">
+										<li>Multiple organizations</li>
+										<li>SAML, LDAP, and CAS</li>
+										<li>Access provisioning</li>
+										<li>24/7 support for urgent issues</li>
+										<li>Advanced auditing</li>
+										<li>Host on your servers, AWS, Azure, or GCP</li>
+									</ul>
+								</div>
+								<button
+									type="button"
+									class="p-3 text-purple text-lg font-bold hover:text-white hover:bg-indigo"
+								>
+									Start a free trial
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</main>
+	</body>
 </html>
